fix subview overflow... well, that was simple

--- a/main/static/css/generic.css
+++ b/main/static/css/generic.css
@@ -235,6 +235,7 @@ button:active {
     flex-grow: 1;
     flex-shrink: 1;
     position: relative;
+    overflow: auto;
 }
 .map.viewtab {
     position: relative;
